2005-01-06  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/*.c: Removed portability to GTK+ 1.x by changing configure.in
	  and remove USE_GTK2 in many small places. Also made some reformat
	  of the code to fit into the rest of the gerbv codebase.

2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw.c: When drawing circles I ignored if circle
          had inner diameter, which was pointed out by Harry Eaton. 
          Not anymore... Closes bug #1050340 in this branch.

	* Updated to TinyScheme 1.35

2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>

        * src/draw_amacro.c: Forgot to use local_gc when drawing some
          of the primitive aperture macros. Closes bug #1051045.

2004-10-13 Juergen Haas <juergenhaas@gmx.net>

	* right click on selected part (current active selection) now works 
	  also on shapes with PIN1 Off centre axis
	  FIXME circular shapes are recognised  at a fixed radius of 3mm 
	  Only works with units of gerbv match units used in pick and place 
	  file! 

2004-10-11 Juergen Haas <juergenhaas@gmx.net>

	* a first draft of API documentation exists see doc/html/main.html
	 After adding further comments please use the following style:
	 /** brief description.
	 Now we can write details */
	Afterwards use doc/Doxyfile.nopreprocessing to update documentation
	with doxygen

2004-09-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: If you tried to invert color of an unloaded layer
          you got a segmentation fault. I think it was discovered by Juergen.

2004-09-11 Juergen Haas <juergenhaas@gmx.net>

	* right click in window with active selection now shows part 
	  designator in statusline for easier identification in multiple 
	  selections
	  FIXME only works if pin1 is not on center axis of part


2004-09-09 Juergen Haas <juergenhaas@gmx.net>

	* added footprint column shown in result search window

2004-09-05 Juergen Haas <juergenhaas@gmx.net>
