@@ -29,11 +29,11 @@ gerbv_SOURCES = amacro.c amacro.h batch.c batch.h color.c color.h draw.c \
 		gerb_file.c gerb_file.h gerb_image.c gerb_image.h gerber.c \
 		gerber.h gerbv.c gerbv_icon.h gerbv_screen.h log.c log.h \
 		opdefines.h project.c project.h scheme-private.h scheme.c \
+		scheme.h setup.c setup.h tooltable.c tooltable.h \
 		search.c search.h search_file.c search_file.h search_cb.c \
 		search_cb.h search_gui.c search_gui.h search_mark.c \
-		gerb_transf.c gerb_transf.h \
-		csv.c csv.h	\
-		scheme.h setup.c setup.h tooltable.c tooltable.h
+		search_mark.h gerb_transf.c gerb_transf.h csv.c csv.h \
+		csv_defines.h
 
 scmdatadir = @BACKEND_DIR@
 dist_scmdata_DATA = init.scm
