@@ -1,5 +1,8 @@
 2005-01-06  Stefan Petersen  <spe@siouxsie.umunet.org>
 
+	* src/Makefile.am: A clean make distcheck by adding some missing
+	  .h-files in Makefile.am
+
 	* src/*.c: Removed portability to GTK+ 1.x by changing configure.in
 	  and remove USE_GTK2 in many small places. Also made some reformat
 	  of the code to fit into the rest of the gerbv codebase.
